Свёрстан блок results-list на hotels.html

--- a/hotels.html
+++ b/hotels.html
@@ -131,6 +131,87 @@
         <div class="results-list">
           <div class="inner-container">
 
+            <div class="hotel-info">
+              <div class="hotel-preview"><img src="" alt=""></div>
+              <div class="hotel-info">
+                <div class="hotel-name">
+                  <h2></h2>
+                </div>
+                <div class="hotel-details">
+                  <p></p>
+                  <button></button>
+                </div>
+                <div class="hotel-order">
+                  <p></p>
+                  <button></button>
+                </div>
+              </div>
+              <div class="hotel-rating">
+                <div class="rating-star">
+                  <img src="" alt="">
+                  <img src="" alt="">
+                  <img src="" alt="">
+                </div>
+                <div class="rating-text">
+                  <p></p>
+                </div>
+              </div>
+            </div>
+
+            <div class="hotel-info">
+              <div class="hotel-preview"><img src="" alt=""></div>
+              <div class="hotel-info">
+                <div class="hotel-name">
+                  <h2></h2>
+                </div>
+                <div class="hotel-details">
+                  <p></p>
+                  <button></button>
+                </div>
+                <div class="hotel-order">
+                  <p></p>
+                  <button></button>
+                </div>
+              </div>
+              <div class="hotel-rating">
+                <div class="rating-star">
+                  <img src="" alt="">
+                  <img src="" alt="">
+                  <img src="" alt="">
+                </div>
+                <div class="rating-text">
+                  <p></p>
+                </div>
+              </div>
+            </div>
+            
+            <div class="hotel-info">
+              <div class="hotel-preview"><img src="" alt=""></div>
+              <div class="hotel-info">
+                <div class="hotel-name">
+                  <h2></h2>
+                </div>
+                <div class="hotel-details">
+                  <p></p>
+                  <button></button>
+                </div>
+                <div class="hotel-order">
+                  <p></p>
+                  <button></button>
+                </div>
+              </div>
+              <div class="hotel-rating">
+                <div class="rating-star">
+                  <img src="" alt="">
+                  <img src="" alt="">
+                  <img src="" alt="">
+                </div>
+                <div class="rating-text">
+                  <p></p>
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       
