Добавлены стили для results-list на hotels.html

--- a/hotels.html
+++ b/hotels.html
@@ -127,90 +127,91 @@
         </div>
 
         <div class="results-list">
-          <div class="inner-container">
 
+          <div class="hotel-card inner-container">
+            <div class="hotel-preview"><img height="135" width="90" src="img/main/hotel-preview-1.jpg"
+                alt="Фото пруда у отеля на фоне горы"></div>
             <div class="hotel-info">
-              <div class="hotel-preview"><img src="" alt=""></div>
-              <div class="hotel-info">
-                <div class="hotel-name">
-                  <h2></h2>
-                </div>
+              <div class="hotel-name">
+                <h2>Amara Resort & Spa</h2>
+              </div>
+              <div class="hotel-card-btn-wrapper">
                 <div class="hotel-details">
-                  <p></p>
-                  <button></button>
+                  <p>Апартаменты</p>
+                  <button>Подробнее</button>
                 </div>
                 <div class="hotel-order">
-                  <p></p>
-                  <button></button>
-                </div>
-              </div>
-              <div class="hotel-rating">
-                <div class="rating-star">
-                  <img src="" alt="">
-                  <img src="" alt="">
-                  <img src="" alt="">
-                </div>
-                <div class="rating-text">
-                  <p></p>
+                  <p>от 4 000 &#8381;</p>
+                  <button>Забронировать</button>
                 </div>
               </div>
             </div>
-
-            <div class="hotel-info">
-              <div class="hotel-preview"><img src="" alt=""></div>
-              <div class="hotel-info">
-                <div class="hotel-name">
-                  <h2></h2>
-                </div>
-                <div class="hotel-details">
-                  <p></p>
-                  <button></button>
-                </div>
-                <div class="hotel-order">
-                  <p></p>
-                  <button></button>
-                </div>
+            <div class="hotel-rating">
+              <div class="rating-stars">
+                <img height="17" width="17" src="img/icon/star.svg" alt="Звёздочка рейтинга">
+                <img height="17" width="17" src="img/icon/star.svg" alt="Звёздочка рейтинга">
+                <img height="17" width="17" src="img/icon/star.svg" alt="Звёздочка рейтинга">
+                <img height="17" width="17" src="img/icon/star.svg" alt="Звёздочка рейтинга">
               </div>
-              <div class="hotel-rating">
-                <div class="rating-star">
-                  <img src="" alt="">
-                  <img src="" alt="">
-                  <img src="" alt="">
-                </div>
-                <div class="rating-text">
-                  <p></p>
-                </div>
-              </div>
+              <div class="rating-text">Рейтинг: 8,5</div>
             </div>
-
-            <div class="hotel-info">
-              <div class="hotel-preview"><img src="" alt=""></div>
-              <div class="hotel-info">
-                <div class="hotel-name">
-                  <h2></h2>
-                </div>
-                <div class="hotel-details">
-                  <p></p>
-                  <button></button>
-                </div>
-                <div class="hotel-order">
-                  <p></p>
-                  <button></button>
-                </div>
-              </div>
-              <div class="hotel-rating">
-                <div class="rating-star">
-                  <img src="" alt="">
-                  <img src="" alt="">
-                  <img src="" alt="">
-                </div>
-                <div class="rating-text">
-                  <p></p>
-                </div>
-              </div>
-            </div>
-
           </div>
+
+          <div class="hotel-card inner-container">
+            <div class="hotel-preview"><img height="135" width="90" src="img/main/hotel-preview-3.jpg"
+                alt="Фото парадной вывески мотеля с мини-фонтаном"></div>
+            <div class="hotel-info">
+              <div class="hotel-name">
+                <h2>Desert Quail Inn</h2>
+              </div>
+              <div class="hotel-card-btn-wrapper">
+                <div class="hotel-details">
+                  <p>Мотель</p>
+                  <button>Подробнее</button>
+                </div>
+                <div class="hotel-order">
+                  <p>от 3 000 &#8381;</p>
+                  <button>Забронировать</button>
+                </div>
+              </div>
+            </div>
+            <div class="hotel-rating">
+              <div class="rating-stars">
+                <img height="17" width="17" src="img/icon/star.svg" alt="Звёздочка рейтинга">
+                <img height="17" width="17" src="img/icon/star.svg" alt="Звёздочка рейтинга">
+                <img height="17" width="17" src="img/icon/star.svg" alt="Звёздочка рейтинга">
+              </div>
+              <div class="rating-text">Рейтинг: 8,9</div>
+            </div>
+          </div>
+
+          <div class="hotel-card inner-container">
+            <div class="hotel-preview"><img height="135" width="90" src="img/main/hotel-preview-2.jpg"
+                alt="Фото апартаментов среди деревьев на лужайке"></div>
+            <div class="hotel-info">
+              <div class="hotel-name">
+                <h2>Villas at Poco Diablo</h2>
+              </div>
+              <div class="hotel-card-btn-wrapper">
+                <div class="hotel-details">
+                  <p>Апартаменты</p>
+                  <button>Подробнее</button>
+                </div>
+                <div class="hotel-order">
+                  <p>от 2 000 &#8381;</p>
+                  <button>Забронировать</button>
+                </div>
+              </div>
+            </div>
+            <div class="hotel-rating">
+              <div class="rating-stars">
+                <img height="17" width="17" src="img/icon/star.svg" alt="Звёздочка рейтинга">
+                <img height="17" width="17" src="img/icon/star.svg" alt="Звёздочка рейтинга">
+              </div>
+              <div class="rating-text">Рейтинг: 9,2</div>
+            </div>
+          </div>
+
         </div>
 
       </section>
