--- a/index.html
+++ b/index.html
@@ -129,9 +129,7 @@
         <p class="hotels-subtitle">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения
           гостиниц в Седоне </p>
 
-        <button class="index-btn" type="button">
-          <p> Поиск гостиницы в Седоне </p>
-        </button>
+        <button class="index-btn" type="button">Поиск гостиницы в Седоне</button>
 
       </section>
 
@@ -158,9 +156,7 @@
                 <input class="index-line-input" type="number" id="children-count" name="children" value="1" min="1" max="100">
               </div>
             </div>
-            <button class="index-submit-btn" type="submit">
-              <p> Найти </p>
-            </button>
+            <button class="index-submit-btn" type="submit">Найти</button>
           </form>
         </div>
 
@@ -218,9 +214,9 @@
   </div>
 
   <!-- <script src="js/func__.js"></script> -->
+  <script src="js/variables.js"></script>
   <script src="js/func__setTodaysDate.js"></script>
   <script src="js/func__toggleModalWindow.js"></script>
-  <script src="js/variables.js"></script>
   <script src="js/handlers.js"></script>
 
 </body>
