--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
       <div class="inner-container">
         <nav class="main-navigation">
           <ul class="navigation-list">
+            <li class="list-item-left"><a class="navigation-active">Главная</a></li>
             <li class="list-item-left"><a href="hotels.html">Гостиницы</a></li>
-            <li class="list-item-left"><a href="#">Карта штата</a></li>
-            <li class="navigation-logo">
-              <a href="index.html"><p class="visually-hidden"> Главная </p></a>
-            </li>
+            <li class="navigation-logo"></li>
             <li class="list-item-right"><a href="#">Информация</a></li>
             <li class="list-item-right"><a href="#">Фото и видео</a></li>
           </ul>
