Добавлен задний фон для изображений

--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 
 <body>
 
+  <h1 class="visually-hidden">Сайт туристического городка Sedona</h1>
+
   <div class="main-container">
 
     <header class="header">
+      <h2 class="visually-hidden">Шапка сайта</h2>
       <div class="inner-container">
         <nav class="main-navigation">
           <ul class="navigation-list">
@@ -28,8 +31,6 @@
     </header>
 
     <main class="main">
-
-      <h1 class="visually-hidden">Сайт туристического городка Sedona</h1>
 
       <section class="main-logo">
         <h2 class="visually-hidden">Логотип-приветствие посетителя</h2>
@@ -146,12 +147,13 @@
             <div class="index-form-line">
               <div class="index-line-div">
                 <label class="index-line-label" for="adults-count"> Взрослые: </label>
-                <input class="index-line-input" type="number" id="adults-count" name="adults" value="2" min="1" max="100"
-                  required>
+                <input class="index-line-input" type="number" id="adults-count" name="adults" value="2" min="1"
+                  max="100" required>
               </div>
               <div class="index-line-div">
                 <label class="index-line-label" for="children-count"> Дети: </label>
-                <input class="index-line-input" type="number" id="children-count" name="children" value="1" min="1" max="100">
+                <input class="index-line-input" type="number" id="children-count" name="children" value="1" min="1"
+                  max="100">
               </div>
             </div>
             <button class="index-submit-btn" type="submit">Найти</button>
