Заменены декоративные стрелочки на svg изображение

--- a/index.html
+++ b/index.html
@@ -36,15 +36,8 @@
         <h2 class="visually-hidden">Логотип-приветствие посетителя</h2>
         <img src="img/icon/welcome.png"
           alt="Изображение, на котором написано: 'Welcome to the gorgeous Sedona. «Because the Grand Canyon sucks!»'">
-        <div class="decorative-arrows">
-          <div class="arrows-wrapper">
-            <div class="arrows">
-              <div class="arrow-inner"></div>
-            </div>
-            <div class="arrows">
-              <div class="arrow-outer"></div>
-            </div>
-          </div>
+        <div class="decorative-arrows-wrapper">
+          <img class="decorative-arrows" src="svg/arrows.svg" alt="Декоративные стрелочки">
         </div>
       </section>
 
@@ -77,8 +70,7 @@
             <p class="card-text">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </div>
           <div class="feature-card">
-            <img class="card-icon" height="80" width="80" src="svg/gift.svg"
-              alt="Иконка в виде подарочной коробки">
+            <img class="card-icon" height="80" width="80" src="svg/gift.svg" alt="Иконка в виде подарочной коробки">
             <p class="card-title">Сувениры</p>
             <p class="card-text">Не только китайского, но и местного производства!</p>
           </div>
