--- a/hotels.html
+++ b/hotels.html
@@ -247,7 +247,7 @@
       <div class="footer-socials">
         <a href="#">
           <div class="social-link">
-            <svg height="25" width="25" viewBox="0 0 512 512" alt="Иконка Твиттер">
+            <svg height="25" width="25" viewBox="0 0 512 512" aria-label="Иконка Твиттер">
               <defs />
               <path class="path-background"
                 d="M512 97c-19 9-39 14-60 17 21-13 38-34 46-58-21 12-43 20-67 25a105 105 0 00-179 96c-87-4-164-46-216-110a106 106 0 0032 140c-17 0-34-5-48-13v2c0 51 37 93 85 103a105 105 0 01-48 1c14 42 52 73 98 74A211 211 0 010 417c46 30 102 47 161 47a297 297 0 00298-312c21-15 39-34 53-55z" />
@@ -256,7 +256,7 @@
         </a>
         <a href="#">
           <div class="social-link">
-            <svg height="25" width="25" viewBox="0 0 512 512" alt="Иконка Facebook">
+            <svg height="25" width="25" viewBox="0 0 512 512" aria-label="Иконка Facebook">
               <defs />
               <path class="path-background"
                 d="M320 85h64c6 0 11-4 11-10V11c0-6-5-11-11-11h-64c-65 0-117 53-117 117v75h-75c-6 0-11 5-11 11v64c0 6 5 10 11 10h75v224c0 6 4 11 10 11h64c6 0 11-5 11-11V277h75c4 0 8-3 10-7l21-64a11 11 0 00-10-14h-96v-75c0-17 14-32 32-32z" />
@@ -265,7 +265,7 @@
         </a>
         <a href="#">
           <div class="social-link">
-            <svg height="25" width="25" viewBox="0 0 68 48" alt="Иконка YouTube">
+            <svg height="25" width="25" viewBox="0 0 68 48" aria-label="Иконка YouTube">
               <defs />
               <path class="path-background"
                 d="M66.5 7.7c-.8-2.9-2.5-5.4-5.4-6.2C55.8.1 34 0 34 0S12.2.1 6.9 1.6c-3 .7-4.6 3.2-5.4 6.1a89.6 89.6 0 000 32.5c.8 3 2.5 5.5 5.4 6.3C12.2 47.9 34 48 34 48s21.8-.1 27.1-1.6c3-.7 4.6-3.2 5.4-6.1C68 35 68 24 68 24s0-11-1.5-16.3z" />
