--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
 
       <section class="main-map">
 
+      <h2 class="visually-hidden">Карта</h2>
+
         <div class="index-form-wrapper">
           <form class="index-form" style="display:block;opacity: 1;" action="https://echo.htmlacademy.ru" method="POST">
             <div class="index-form-line">
